# Ed448-Goldilocks

./: .gitignore  Cargo.toml  README.md  readme.md
.github/workflows/: rust.yml
src/: constants.rs  decaf.rs  field.rs  lib.rs  sign.rs
src/curve/: edwards.rs  mod.rs  montgomery.rs
src/curve/edwards/: affine.rs  extended.rs  mod.rs
src/curve/montgomery/: mod.rs  montgomery.rs
src/curve/scalar_mul/: mod.rs  variable_base.rs
src/curve/scalar_mul/window/wnaf/: mod.rs
src/curve/twedwards/: affine.rs  extended.rs  extensible.rs  projective.rs
src/decaf/: affine.rs  decaf.rs  ops.rs  points.rs
src/field/: element.rs  mod.rs  scalar.rs
src/field/fiat_u64/: constants.rs  prime_field.rs
src/field/u32/: prime_field.rs
src/ristretto/: points.rs  ristretto.rs
src/sign/: error.rs  expanded.rs  signature.rs  signing_key.rs  verifying_key.rs
