[package]
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>", "Michael Lodder <redmike7@gmail.com>"]
name = "ed448-goldilocks-plus"
version = "0.12.0"
edition = "2021"
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/mikelodder7/Ed448-Goldilocks"
homepage = "https://github.com/mikelodder7/Ed448-Goldilocks"
documentation = "https://github.com/mikelodder7/Ed448-Goldilocks"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "decaf", "ed448", "ed448-goldilocks"]
description = "A pure-Rust implementation of Ed448 and Curve448 and Decaf"
exclude = [".gitignore", ".github/*"]

[dependencies]
crypto-bigint = { version = "0.5", features = ["generic-array"] }
elliptic-curve = { version = "0.13", features = ["arithmetic", "bits", "hash2curve", "hazmat", "jwk", "pkcs8", "pem", "sec1"] }
subtle = { version = "2.6", default-features = false }
rand_core = { version = "0.6", default-features = false }
serdect = { version = "0.3.0-rc.0", optional = true }
sha3 = { version = "0.10", default-features = false }
zeroize = { version = "1.8", default-features = false, optional = true }

[features]
default = ["std"]
std = ["serdect/default", "zeroize/default"]
alloc = ["serdect/alloc", "zeroize/alloc"]
serde = ["dep:serdect"]
zeroize = ["dep:zeroize"]

[dev-dependencies]
hex-literal = "0.4"
hex = "0.4"
rand_core = { version = "0.6", features = ["std"] }
serde_bare = "0.5"
serde_json = "1.0"
