[package]
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>", "Michael Lodder <redmike7@gmail.com>"]
categories = ["cryptography"]
description = """A pure-Rust implementation of Ed448 and Curve448 and Decaf.
This crate also includes signing and verifying of Ed448 signatures.
"""
documentation = "https://docs.rs/ed448-goldilocks-plus"
exclude = [".gitignore", ".github/*"]
edition = "2024"
homepage = "https://docs.rs/ed448-goldilocks-plus/"
keywords = ["cryptography", "decaf", "ed448", "ed448-goldilocks"]
license = "BSD-3-Clause"
name = "ed448-goldilocks-plus"
readme = "README.md"
repository = "https://github.com/mikelodder7/Ed448-Goldilocks"
version = "0.17.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
crypto-bigint = { version = "0.7.5", features = ["subtle"], default-features = false }
elliptic-curve = { version = "0.14.1", features = ["arithmetic", "pkcs8", "pem", "sec1"] }
ff = { version = "0.14.0", features = ["bits"] }
group = "0.14.0"
hash2curve = "0.14.0"
pkcs8 = { version = "0.11.0", optional = true }
rand_core = { version = "0.10.1", default-features = false }
serdect = { version = "0.4.3", optional = true }
sha3 = { version = "0.12.0", default-features = false }
shake = { version = "0.1.0", default-features = false }
crypto_signature = { version = "3.0.0", default-features = false, features = ["digest", "rand_core"], optional = true, package = "signature" }
subtle = { version = "2.6.1", default-features = false }
zeroize = { version = "1.9.0", default-features = false, optional = true }

[features]
default = ["std", "signing", "pkcs8"]
alloc = ["serdect/alloc", "zeroize/alloc"]
pkcs8 = ["dep:pkcs8"]
signing = ["dep:crypto_signature", "zeroize"]
serde = ["dep:serdect"]
std = ["serdect/default", "zeroize/default", "crypto_signature/alloc"]
zeroize = ["dep:zeroize"]

[dev-dependencies]
hex-literal = "1.1.0"
hex = "0.4.3"
rand_core = "0.10.1"
rand_chacha = "0.10.0"
serde_bare = "0.5"
serde_json = "1.0.150"
elliptic-curve-tools = "0.3.0"
